modified index file

--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
     </h1>
 </center>
 <hr>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum voluptates aliquid repellendus. Ab aut repellat tenetur nihil, pariatur facilis ea fugiat, quas corporis ipsam libero inventore velit molestiae nobis architecto.</p>
