Modified the index file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <center>
     <h1 id="change" style="background-color: yellow; color: black;"> Hello Vrohhh</h1>
     <button onclick="fun()">Click</button>
+    <button onclick="replace()">Submit</button>
     <script>
         var js=document.getElementById("change")
         console.log(js.textContent)
+        function replace(){
+            location.replace("https://www.instagram.com/?hl=en")
+        }
         function fun()
         {
             js.textContent="Vanakam da Maplaa..."
